<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Resources -->
    <string name="app_name">Car Xposed!</string>
    <string name="toggler">Car Toggler</string>
    <string name="cancel">Cancel</string>

    <!-- Headers -->
    <string name="interface_mods">Interface Mods</string>
    <string name="startup_mods">On Startup</string>
    <string name="exit_mods">On Exit</string>
    <string name="about">About the Module</string>
    <string name="mod_settings">Module Settings</string>

    <!-- Settings -->
    <string name="allow_pulldown">Allow Statusbar Pulldown</string>
    <string name="allow_pulldown_long">Restore pulldown functionality to the statusbar.</string>
    <string name="allow_multitasking">Allow Multi-Tasking</string>
    <string name="allow_multitasking_long">Restore \'Recent Apps\' functionality.</string>
    <string name="bypassExitDialog">Exit without confirmation</string>
    <string name="bypassExitDialog_long">Skip the confirmation dialog when exiting the Car app.</string>
    <string name="capture_home">Take over \'Home\' button</string>
    <string name="capture_home_long">Make \'Home\' button stay in the Car App. Disable to go to launcher.</string>
    <string name="wifi_mode">Wi-Fi</string>
    <string name="gps_mode">GPS</string>
    <string name="killer_desc">Process Killer</string>
    <string name="killer_pref">Close opened apps</string>
    <string name="killer_long">Close all apps opened from within the Car app.</string>
    <string name="killer_root">Use root method</string>
    <string name="killer_root_long">Some apps can only be forcibly closed using root.</string>
    <string name="root_failed">Failed getting root privileges!</string>
    <string name="wakelock">Keep Screen On</string>
    <string name="enable_app_icon">Enable Icon</string>
    <string name="enable_app_icon_long">Whether to display the icon for this settings app in the launcher.\nEither way it\'s still available in the Xposed Installer.</string>
    <string name="enable_toggler">Enable Toggler</string>
    <string name="enable_toggler_long">Enable the \"Toggler\" icon which shuts the Car app off if it\'s running and starts it if it\'s not.</string>
    <string name="toggler_launch">Launch the Car App if not running.</string>
    <string name="toggler_launch_long">Leave disabled to only shut the Car app down, but not launch it if it\'s already off.</string>
    <string name="three_fingers">3-Fingers Tap</string>
    <string name="lock_screen">Put Device in Sleep</string>
    <string name="lock_screen_long">Requires application to be enabled as an Administrator!</string>
    <string name="enable_logging">Enable Logging</string>
    <string name="enable_logging_long">Writes everything the module does into a logfile on </string>
    <string name="car_version">Car App Version</string>
    <string name="not_detected">NOT DETECTED!</string>

    <!-- Errors -->
    <string name="no_privilages">Screen can not be turned off if the Car Xposed module isn\'t set as a Device Administrator</string>

    <!-- About Strings -->
    <string name="Created_By">Created By</string>
    <string name="Elad_Avron">Elad Avron</string>
    <string name="help_support">Help and Support</string>
    <string name="click_here">Click here for the XDA-Developers thread.</string>
    <string name="Libraries_Used">Libraries Used</string>
    <string name="root_tools">RootTools 3.5 by Stericson.\n(Click for GitHub repository).</string>

    <string-array name="overrides">
        <item>Stock (HTC Speak)</item>
        <item>Google Hands-Free</item>
        <item>Google Now</item>
        <item>Custom...</item>
    </string-array>

    <string-array name="overrides_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="modes">
        <item>Don\'t Change</item>
        <item>Turn On</item>
        <item>Turn Off</item>
    </string-array>
    <string-array name="modes_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="action_settings">Settings</string>

</resources>
