<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="interface_mods"
        android:title="@string/interface_mods">
        <CheckBoxPreference
            android:title="@string/allow_pulldown"
            android:summary="@string/allow_pulldown_long"
            android:key="allow_pulldown"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/allow_multitasking"
            android:summary="@string/allow_multitasking_long"
            android:key="allow_multitasking"
            android:defaultValue="true"
            android:dependency="allow_pulldown"/>
        <CheckBoxPreference
            android:title="@string/capture_home"
            android:summary="@string/capture_home_long"
            android:key="capture_home"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="hardware_mods"
        android:title="@string/startup_mods">
        <ListPreference
            android:key="wifi_mode"
            android:title="@string/wifi_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="0"/>
        <ListPreference
            android:key="gps_mode"
            android:title="@string/gps_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="1"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="hardware_exit"
        android:title="@string/exit_mods">
        <ListPreference
            android:key="wifi_exit"
            android:title="@string/wifi_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="0"/>
        <ListPreference
            android:key="gps_exit"
            android:title="@string/gps_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="1"/>
        <CheckBoxPreference
            android:title="@string/bypassExitDialog"
            android:summary="@string/bypassExitDialog_long"
            android:key="bypassExitDialog"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/killer_pref"
            android:summary="@string/killer_long"
            android:key="kill_apps"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="@string/killer_root"
            android:summary="@string/killer_root_long"
            android:key="kill_root"
            android:defaultValue="false"
            android:dependency="kill_apps"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference android:title="@string/Created_By"
            android:summary="@string/Elad_Avron"/>
        <Preference android:title="@string/help_support"
            android:summary="@string/click_here"
            android:key="help_support"/>
        <Preference android:title="@string/Libraries_Used"
            android:summary="@string/root_tools"
            android:key="root_tools"/>
    </PreferenceCategory>
</PreferenceScreen>