<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="interface_mods"
        android:title="@string/interface_mods">
        <CheckBoxPreference
            android:title="@string/allow_pulldown"
            android:summary="@string/allow_pulldown_long"
            android:key="allow_pulldown"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/allow_multitasking"
            android:summary="@string/allow_multitasking_long"
            android:key="allow_multitasking"
            android:defaultValue="true"
            android:dependency="allow_pulldown"/>
        <CheckBoxPreference
            android:title="@string/capture_home"
            android:summary="@string/capture_home_long"
            android:key="capture_home"
            android:defaultValue="true"/>
        <ambious.htccarxposed.GesturePreference
            android:key="gesture_override"
            android:title="@string/three_fingers"
            android:entries="@array/overrides"
            android:entryValues="@array/overrides_values"
            android:defaultValue="1"/>
        <CheckBoxPreference
            android:key="wakelock"
            android:title="@string/wakelock"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="hardware_mods"
        android:title="@string/startup_mods">
        <ListPreference
            android:key="wifi_mode"
            android:title="@string/wifi_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="0"/>
        <!--<ListPreference-->
            <!--android:key="gps_mode"-->
            <!--android:title="@string/gps_mode"-->
            <!--android:entries="@array/modes"-->
            <!--android:entryValues="@array/modes_values"-->
            <!--android:defaultValue="0"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="hardware_exit"
        android:title="@string/exit_mods">
        <ListPreference
            android:key="wifi_exit"
            android:title="@string/wifi_mode"
            android:entries="@array/modes"
            android:entryValues="@array/modes_values"
            android:defaultValue="0"/>
        <!--<ListPreference-->
            <!--android:key="gps_exit"-->
            <!--android:title="@string/gps_mode"-->
            <!--android:entries="@array/modes"-->
            <!--android:entryValues="@array/modes_values"-->
            <!--android:defaultValue="0"/>-->
        <CheckBoxPreference
            android:title="@string/bypassExitDialog"
            android:summary="@string/bypassExitDialog_long"
            android:key="bypassExitDialog"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/killer_pref"
            android:summary="@string/killer_long"
            android:key="kill_apps"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="@string/killer_root"
            android:summary="@string/killer_root_long"
            android:key="kill_root"
            android:defaultValue="false"
            android:dependency="kill_apps"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/mod_settings"
        android:key="mod_settings">
        <CheckBoxPreference
            android:title="@string/enable_app_icon"
            android:summary="@string/enable_app_icon_long"
            android:key="enable_app_icon"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/enable_toggler"
            android:summary="@string/enable_toggler_long"
            android:key="enable_toggler"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="@string/toggler_launch"
            android:summary="@string/toggler_launch_long"
            android:key="toggler_launch"
            android:defaultValue="true"
            android:dependency="enable_toggler"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference android:title="@string/Created_By"
            android:summary="@string/Elad_Avron"/>
        <Preference android:title="@string/help_support"
            android:summary="@string/click_here">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/xposed/modules/mod-htc-car-mode-xposed-t2769713"
                />
        </Preference>
        <Preference android:title="@string/Libraries_Used"
            android:summary="@string/root_tools">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/Stericson/RootTools"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>